aplique sistema de posibilidades

--- a/index.html
+++ b/index.html
@@ -149,6 +149,21 @@
       </div>
     </div>
 
+    <!-- Modal de límite alcanzado -->
+    <div id="limitModal" class="limit-modal">
+      <div class="limit-content">
+        <div class="limit-icon">🚫</div>
+        <h2>¡Límite Alcanzado!</h2>
+        <p>Has alcanzado el límite máximo de <strong>$100,000 COP</strong></p>
+        <p>El juego se ha bloqueado por seguridad.</p>
+        <div class="limit-actions">
+          <button id="restartGame" class="btn btn--primary">
+            Reiniciar Juego
+          </button>
+        </div>
+      </div>
+    </div>
+
     <script src="app.js"></script>
   </body>
 </html>
