--- a/index.html
+++ b/index.html
@@ -188,9 +188,9 @@
             <span class="stat-value" id="finalProfit">$0 COP</span>
           </div>
         </div>
-        <button class="btn btn--primary" id="restartGameBtn">
-          Comenzar Nuevo Juego
-        </button>
+        <a class="btn btn--primary" id="goHomeBtn" href="/">
+          Ir al inicio
+        </a>
       </div>
     </div>
 
